--- a/graphql-basics/package.json
+++ b/graphql-basics/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "faker": "^4.1.0",
     "graphql": "^0.13.2",
-    "graphql-yoga": "^1.16.9"
+    "graphql-yoga": "^1.16.9",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
