--- a/graphql-basics/package.json
+++ b/graphql-basics/package.json
@@ -10,6 +10,7 @@
   "author": "Jason Sprouse",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "faker": "^4.1.0",
     "graphql": "^0.13.2",
     "graphql-yoga": "^1.16.9",
