--- a/graphql-basics/.babelrc
+++ b/graphql-basics/.babelrc
@@ -3,6 +3,6 @@
         "@babel/preset-env"
     ], 
     "plugins": [
-        "transform-object-rest-spread"
+        "@babel/plugin-syntax-object-rest-spread"
     ]
 }
