--- a/graphql-basics/package.json
+++ b/graphql-basics/package.json
@@ -10,7 +10,6 @@
   "author": "Jason Sprouse",
   "license": "ISC",
   "dependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "faker": "^4.1.0",
     "graphql": "^0.13.2",
     "graphql-yoga": "^1.16.9",
@@ -20,6 +19,7 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
+    "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "nodemon": "^1.18.9"
   }
